Fixed spacing of images on main page

--- a/styles/media.css
+++ b/styles/media.css
@@ -1,12 +1,10 @@
 /* iPhone */
 
 @media screen and (max-width: 480px) {
-
     body {
         font-family: 'Source Sans Pro', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
         font-size: 1rem;
     }
-
     h1,
     h2,
     h3,
@@ -17,60 +15,49 @@
         margin-bottom: 0;
         /* padding-left: 1rem; */
     }
-
     p {
         width: 70%;
         font-size: 1em;
         display: inline-block;
         padding-left: 1rem;
     }
-
     .p-centered {
         width: calc(100% - 32px);
         display: block;
         margin-right: auto;
         margin-left: auto;
     }
-
     .tuts-ol {
         line-height: 2;
         padding-right: 2rem;
     }
-
     .tuts h1 {
         text-align: left;
     }
-
     .container {
         padding: 0;
     }
-
     .navbar {
         height: auto;
         text-align: center;
     }
-
     .navbar-logo span {
         display: none;
     }
-
     .navbar-logo img {
         padding-right: 0;
     }
-
     .navbar .navbar-logo {
         display: inline-block;
         font-size: 1.5rem;
         float: none;
     }
-
     .navbar-nav {
         padding-top: 1rem;
         border-top: 0.075rem solid rgba(255, 255, 255, 0.25);
         float: none;
         display: block;
     }
-
     .jumbotron {
         height: auto;
         margin-bottom: 3rem;
@@ -80,23 +67,19 @@
         color: #fff;
         text-align: center;
     }
-
     .jumbotron-hero {
         height: auto;
     }
-
     .jumbotron-small {
         padding-top: 10rem;
         margin-left: auto;
         margin-right: auto;
     }
-
     .jumbotron h1 {
         display: block;
         font-size: 1.5em;
         width: auto;
     }
-
     .jumbotron p {
         font-size: 18px;
         display: block;
@@ -104,95 +87,88 @@
         margin-right: auto;
         margin-left: auto;
     }
-
     .logo {
         display: block;
         margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
     }
-
     main img {
         display: none;
     }
-
     .section {
         margin: 0;
         padding-left: 1em;
         padding-right: 1em;
     }
-
     .section iframe {
         width: 100%;
     }
-
     .section figcaption {
+        width: calc(100% - 32px);
         padding-left: 1rem;
         padding-right: 0;
     }
-
     .section:nth-child(1) {
         margin: 0;
     }
-
     .section:nth-child(even) {
         color: #333;
         background-color: #f4f4f4;
     }
-
     .section:nth-child(even) figcaption {
         display: inline-block;
-        width: 50%;
+        width: 100%;
         float: none;
     }
-
     .section:nth-child(odd) figcaption {
         display: inline-block;
-        width: 50%;
+        width: 100%;
         float: none;
     }
-
+    .info-img img {
+        width: 100%;
+        display: block;
+    }
+    .section img {
+        max-width: 100%;
+        margin-bottom: 2rem;
+    }
     .sponsor {
         padding-right: 1.5rem;
         padding-left: 1.5rem;
         padding-bottom: 3rem;
-
     }
-
     .sponsor h1 {
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
     }
-
     .sponsor p {
         padding-bottom: 1.5rem;
     }
-
-    .sponsor p, h1 {
+    .sponsor p,
+    h1 {
         display: block;
         width: calc(100% - 1rem);
         margin: 0 auto;
         text-align: center;
     }
-
     .sponsor img {
         width: calc(100% - 4rem);
         display: block;
         margin: 0 auto;
     }
-
-    .sponsor img, h1 {
+    .sponsor img,
+    h1 {
         float: none;
     }
-
     .form {
         width: calc(100% - 4rem);
         margin-right: auto;
         margin-left: auto;
     }
-
-    .p-sim, .btn-sim {
+    .p-sim,
+    .btn-sim {
         display: none !important;
     }
-
 }
